--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <div class="project-item">
                 <div class="project-info">
                     <h1>Project  1</h1>
-                    <h2>Speech Emotion recognition using MLP</h2>
-                    <p>In this project speech is given as input and after processing the input through different methods features are extracted and emotion of the speech or human is given as output</p>
+                    <h2>Port-Folio</h2>
+                    <p>This projects gives all my details regarding my education,projecs</p>
                     
                 </div>
                 <div class="project-img">
@@ -119,8 +119,8 @@
             <div class="project-item">
                 <div class="project-info">
                     <h1>Project  1</h1>
-                    <h2>Speech Emotion recognition using MLP</h2>
-                    <p>In this project speech is given as input and after processing the input through different methods features are extracted and emotion of the speech or human is given as output</p>
+                    <h2>Hybrid Textual-Graphical authentication scheme</h2>
+                    <p>This project tells about the best authentication with better security,memorability and usability</p>
                 </div>
                 <div class="project-img">
                     <img src="images/5137774.webp" alt="img" width="100%" sizes="40%">
