--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="about container">
         <div class="col-left">
             <div class="about-img">
-                <img src="images/main.jpeg" alt="img">
+                <img src="images/dp2.jpeg" alt="img">
             </div>
         </div>
         <div class="col-right">
